# CMakeTutorial

./: setup.sh
CMakeScript/: CMakeLists.txt
CMakeScript/script/: MyConfig.cmake  MyFunctions.cmake
Calculate/: CMakeLists.txt  main.cpp
ConditionalBranchesAndLoops/: CMakeLists.txt
ConfigureFile/: CMakeLists.txt  main.cpp  main.h.in
CppStandard/: CMakeLists.txt  main.cpp
DependencyManagement/: CMakeLists.txt  main.cpp
DependencyManagement/.cache/clangd/index/: Module1.cpp.745A624CFD99E80B.idx  Module1.cpp.EE6B7221F1EA643A.idx  Module2.cpp.3F7ACDCB6B1CCF4F.idx  Module2.cpp.45DFAAC6CBAB5515.idx  Module2.h.D8FDC9FAE95C0F43.idx  main.cpp.B6D3D751E4F3084F.idx
DependencyManagement/Dependency1/: CMakeLists.txt
DependencyManagement/Dependency1/include/Dependency1/: Module1.h  Module2.h
DependencyManagement/Dependency1/src/: Module1.cpp  Module2.cpp
DependencyManagement/Dependency2/: CMakeLists.txt
DependencyManagement/Dependency2/include/Dependency2/: Module1.h  Module2.h
DependencyManagement/Dependency2/src/: Module1.cpp  Module2.cpp
FunctionExample/: CMakeLists.txt
HelloWorld/: CMakeLists.txt
Message/: CMakeLists.txt
